Middle of scanning process... This might take a while. Added hostnames file to have a lot of targets to scan from.

--- a/tScanner.ipynb
+++ b/tScanner.ipynb
@@ -20,7 +20,9 @@
     "# Certificate Scanning Stage\n",
     "First, a random amount of IPs will be generated in order to attempt a port 443 SSL handshake to obtain the server certificate. The certificates will be stored for furture public key and public key modulus extraction at a later stage.\n",
     "\n",
-    "During the certificate scanning stage, this slice of code will attempt to perform a socket connection to the given ip. With a default timeout of 10 seconds. Since all the ips are randomly generated, we will not be sure that the IP has a running webserver on 443 with HTTPS. The code will reflect on that and continue to test new generated IPs until it reaches the VALID_CERTS limit."
+    "During the certificate scanning stage, this slice of code will attempt to perform a socket connection to the given ip. With a default timeout of 10 seconds. Since all the ips are randomly generated, we will not be sure that the IP has a running webserver on 443 with HTTPS. The code will reflect on that and continue to test new generated IPs until it reaches the VALID_CERTS limit.\n",
+    "\n",
+    "I've also obtained a list of hostnames from rapid7 labs open data to scan through to look for certificates. The code will look out for already scanned hosts and skip if needed."
    ]
   },
   {
@@ -32,13 +34,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 1 certificates and 3 scanned IPs.\n",
-      "Attempting to scan for 100 valid certificate(s).\n"
+      "Loaded 2674 certificate(s) and 14272 scanned IPs.\n",
+      "Attempting to scan for 100 valid certificate(s).\n",
+      "Scanning from hostnames file\n"
      ]
     }
    ],
    "source": [
     "import ssl\n",
+    "import sys\n",
     "import time\n",
     "import random\n",
     "import pickle\n",
@@ -72,13 +76,35 @@
     "VALID_CERTS = 100\n",
     "print(\"Attempting to scan for\", VALID_CERTS, \"valid certificate(s).\")\n",
     "\n",
-    "setdefaulttimeout(2) # time is of the essence\n",
+    "setdefaulttimeout(1) # time is of the essence\n",
     "\n",
     "i = len(certs)\n",
     "tries = 0\n",
     "successful = 0\n",
     "\n",
     "start = time.time()\n",
+    "\n",
+    "def scanIP(ip):\n",
+    "    global i, tries, successful\n",
+    "    try:                                                                                                              \n",
+    "        cert = ssl.get_server_certificate((ip, 443))\n",
+    "    except (error, timeout) as err:\n",
+    "      cert = \"Timed Out\"\n",
+    "\n",
+    "    if cert != \"Timed Out\":\n",
+    "        certs[ip] = cert\n",
+    "        #print(\"Certificate extracted from\", ip)\n",
+    "        successful += 1\n",
+    "        i += 1\n",
+    "        with open(\"scanned_certs.pkl\", 'wb') as f:\n",
+    "            pickle.dump(certs, f)\n",
+    "    \n",
+    "        with open(\"scanned_ips.pkl\", 'wb') as f:\n",
+    "            pickle.dump(scannedIps, f)\n",
+    "            \n",
+    "    else:\n",
+    "        pass\n",
+    "        #print(ip, \"timed out\")\n",
     "\n",
     "# Randomly Generate IPs and attempt to obtain a valid SSL \n",
     "# certificate off of them\n",
@@ -90,29 +116,25 @@
     "    #print(\"Trying\", addr_str)\n",
     "    if addr_str not in scannedIps:\n",
     "        scannedIps.add(addr_str)\n",
-    "        try:                                                                                                              \n",
-    "          cert = ssl.get_server_certificate((addr_str, 443))\n",
-    "        except (error, timeout) as err:\n",
-    "          cert = \"Timed Out\"\n",
-    "        \n",
-    "        if cert != \"Timed Out\":\n",
-    "            certs[addr_str] = cert\n",
-    "            #print(\"Certificate extracted from\", addr_str)\n",
-    "            successful += 1\n",
-    "            i += 1\n",
-    "        else:\n",
-    "            pass\n",
-    "            #print(addr_str, \"timed out\")\n",
+    "        scanIP(addr_str)\n",
+    "\n",
+    "if True:\n",
+    "    print(\"Scanning from hostnames file\")\n",
+    "    with open('hostnames_443') as f:\n",
+    "        hostnames = f.readlines()\n",
+    "\n",
+    "    hostnames = [h.rstrip('\\n') for h in hostnames]\n",
+    "\n",
+    "    for name in hostnames:\n",
+    "        if name not in scannedIps and len(name) < 64:\n",
+    "            scannedIps.add(name)\n",
+    "            scanIP(name)\n",
     "            \n",
     "#print(certs)\n",
     "print(\"Tried\", tries, \"ips for\", successful, \"successful certificate extractions.\")\n",
     "end = time.time()\n",
     "print(\"Scanning for\", successful, \"valid certificates took\", (end-start)/60, \"minutes\")\n",
-    "with open(\"scanned_certs.pkl\", 'wb') as f:\n",
-    "    pickle.dump(certs, f)\n",
-    "    \n",
-    "with open(\"scanned_ips.pkl\", 'wb') as f:\n",
-    "    pickle.dump(scannedIps, f)"
+    "print(\"Total Scanned Certificates:\", len(certs))"
    ]
   },
   {
@@ -125,9 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 2674 certificate(s) for public key info extraction.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the dictionary, if possible\n",
     "if os.path.exists(os.path.join(os.getcwd(), 'scanned_certs.pkl')):\n",
@@ -139,8 +169,20 @@
     "    \n",
     "print(\"Loaded\", len(certs), \"certificate(s) for public key info extraction.\")\n",
     "\n",
-    "key = x509.load_pem_x509_certificate(cert.encode(), default_backend())\n",
-    "keyPub = key.public_key().public_bytes(Encoding.PEM, PublicFormat.SubjectPublicKeyInfo)"
+    "pubKeys = []\n",
+    "\n",
+    "#print(certs)\n",
+    "\n",
+    "for (i, cert) in certs.items():\n",
+    "    #print(cert)\n",
+    "    key = x509.load_pem_x509_certificate(cert.encode(), default_backend())\n",
+    "    keyPub = key.public_key()\n",
+    "    pubKeys.append(keyPub)\n",
+    "\n",
+    "for pub in pubKeys:\n",
+    "    #print(pub.public_bytes(Encoding.PEM, PublicFormat.SubjectPublicKeyInfo).decode('utf-8'))\n",
+    "    \n",
+    "    pass"
    ]
   },
   {
@@ -164,6 +206,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
