Completed conclusion and insights about the data.

--- a/tScanner.ipynb
+++ b/tScanner.ipynb
@@ -409,7 +409,10 @@
     "## Insights about the data collected and processed\n",
     "Interestingly, all of the keys I've collected recently are safe to batch-gcd, which is good! However I'm sure if I were able to scan more certificates I would be able to find a few keys that are not.\n",
     "\n",
-    "Out of all the keys processed through Tetanus, about .6% of the keys were actually weak to Batch-GCD. And unfortunately, all of them were from the 2016 dataset. People are securing their RSA keys and we should encourage that fact.\n",
+    "Out of all the keys processed through Tetanus, about .6% of the keys were actually weak to Batch-GCD. And unfortunately, all of them were from the 2016 dataset. People are securing their RSA keys and we should encourage that fact. I'm very sure that most of the major and important companies have their website certificates securied from this. And I know for sure that big certificate companies such as Let's Encrypt and CloudFlare have already solved this problem.\n",
+    "\n",
+    "## Furthur Study\n",
+    "If I continue the study, I hope to collect more keys... Waaaay more keys. All the keys if possible. EVERY. SINGLE. KEY.\n",
     "\n",
     "# Closing Thoughts\n",
     "It is regrettable that I do not have enough time to collect more \"up-to-date\" certificates due to network and data storage limitations. Otherwise I might've received a more holistic dataset and be more conslusive about the research findings."
