Added reference to study paper this project was based off of.

--- a/tScanner.ipynb
+++ b/tScanner.ipynb
@@ -10,7 +10,9 @@
     "## Web Mining Final Project\n",
     "### Daiwei Chen\n",
     "\n",
-    "This project is to go alongside of [Tetanus](https://github.com/ForeverAnApple/Tetanus), the Batch GCD RSA Weak Keys cracker. The purpose of this tool is to obtain public keys from SSL certificates (SSH, PGP may come later). The other point of this tool is to format the RSA keys correctly to extract the modulus of each key to insert into Tetanus for further analysis."
+    "This project is to go alongside of [Tetanus](https://github.com/ForeverAnApple/Tetanus), the Batch GCD RSA Weak Keys cracker. The purpose of this tool is to obtain public keys from SSL certificates (SSH, PGP may come later). The other point of this tool is to format the RSA keys correctly to extract the modulus of each key to insert into Tetanus for further analysis.\n",
+    "\n",
+    "This project is based off of [Mining Your Ps and Qs](https://factorable.net/weakkeys12.conference.pdf) (Heninger, Du."
    ]
   },
   {
